# Chip8-emulator

./: .gitignore  CMakeLists.txt  loadROM.cpp
.cache/clangd/index/: Metal_Blit.h.16E5E6771C464A78.idx  SDL.c.7A1893D8D9BDE3F4.idx  SDL.h.83B85C10294F058A.idx  SDL_RLEaccel.c.5B9B7A381916F1A9.idx  SDL_RLEaccel_c.h.27DE34404723B778.idx  SDL_assert.c.9294B7B1BBF63610.idx  SDL_assert.h.86A3490DE0039B57.idx  SDL_assert_c.h.52674ACD80373285.idx  SDL_asyncio.c.16F875B7FADBCB5C.idx  SDL_asyncio.h.AE3ED1D8C965E2DB.idx  SDL_asyncio_c.h.19556B1AEEC65630.idx  SDL_asyncio_generic.c.7BDDCCC884FE7B24.idx  SDL_atomic.c.3107A2B134B13EBE.idx  SDL_atomic.h.7572F287A887EB68.idx  SDL_audio.c.FD9821C6C0AE89A1.idx  SDL_audio.h.3BA97C5A9433CBF3.idx  SDL_audio_c.h.FB8612CACF2A11BC.idx  SDL_audio_channel_converters.h.A2386C89ADFD3EDA.idx  SDL_audiocvt.c.288A0886CB60AE56.idx  SDL_audiodev.c.4FE29F85CB2A7B1A.idx  SDL_audioqueue.c.725403B313183D42.idx  SDL_audioqueue.h.C09DED13056A0EC0.idx  SDL_audioresample.c.086C670E5F360B79.idx  SDL_audioresample.h.888106F6FBBB7CFD.idx  SDL_audiotypecvt.c.DA92BEFFDC363363.idx  SDL_begin_code.h.892A2D17D1E4108B.idx  SDL_bits.h.583EC57DCB63409B.idx  SDL_blendfillrect.c.67C34AF2A988E12C.idx  SDL_blendfillrect.h.781E45A1F8DB879E.idx  SDL_blendline.c.1C3F5D6F232D8AB1.idx  SDL_blendline.h.63DC68622DE08A38.idx  SDL_blendmode.h.2D4A7EE68164B516.idx  SDL_blendpoint.c.3C8AE22786C1E960.idx  SDL_blendpoint.h.FF752579904ED376.idx  SDL_blit.c.8B7E33AEA7184D68.idx  SDL_blit.h.7A46D11B4956B5B2.idx  (+534 more)
src/: chip8.cpp  chip8.h  main.cpp  platform.cpp  platform.h
